# securite2

./: .env.example  README.md  main.py  pyproject.toml
src/passmanager/: arguments.py  commands.py  database.py  db.py  encryption.py  main.py  models.py
src/passmanager/controllers/: password.py  user.py
src/passmanager/inputs/: arguments.py  commands.py
src/passmanager/models/: password.py  user.py
src/passmanager/services/: crypto.py  master_password.py
src/securite2/: __init__.py  main.py
