[project]
name = "securite2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lpotvin", email = "ludopotvin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
securite2 = "securite2:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
