[project]
name = "passmanager"
version = "0.1.0"
description = "single password maanger CLI"
readme = "README.md"
authors = [
    { name = "lpotvin", email = "ludopotvin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "peewee>=3.18.3",
    "python-dotenv>=1.2.1",
]

[project.scripts]
passmanager = "passmanager.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
